fix alignment and styles

--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -1,4 +1,10 @@
+.projects-title {
+  padding-left: 40px;
+}
+
 .projects-container {
+  padding-left: 40px;
+  padding-right: 40px;
   margin-bottom: 40px;
 }
 
@@ -22,8 +28,9 @@
   height: 800px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1000px) {
   .projects-grid {
     flex-direction: column;
+    align-items: center;
   }
 }
